deployment/deployment.dev.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: outy/frontend
        imagePullPolicy: IfNotPresent
        command: ["npm"]
        args: ["start"]
        ports:
        - name: http
          containerPort: 3000
        - name: debug
          containerPort: 9229
