deployment/service.dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: http 
  - name: http-debug
    port: 9229
    targetPort: debug
